# pangeo-pytide

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  azure-pipelines.yml  conftest.py  pytide_trial.ipynb  setup.py
binder/: Dockerfile  environment.yml
conda/: conda_build_config.yaml  environment.yml  meta.yaml
doc/source/: changelog.rst  conf.py  index.rst  module.rst  pytide.rst  pytide_version.rst
docs/source/: about.rst  changelog.rst  conda.rst  conf.py  index.rst  pytide_core.rst  setup.rst  tutorial.rst
notebooks/: mitgcm_detiding.ipynb
noteboooks/: mitgcm_detiding.ipynb
src/pytide/: __init__.py  core.pyi
src/pytide/core/: CMakeLists.txt  angle.hpp  astronomic_angle.cpp  astronomic_angle.hpp  main.cpp  math.hpp  wave.cpp  wave.hpp
src/scripts/: mit_gcm_detiding.py
tests/: test_core.py  test_pyinterp.py  test_pytide.py
tests/dataset/: fes_tide_time_series.nc
